Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/prd-pixeon-hub/prd-pixeon-hub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prd-pixeon-hub-ingress
  namespace: prd-pixeon-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - rest.hub.pixeon.cloud
    secretName: prd-pixeon-hub
  rules:
  - host: rest.hub.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: prd-rest-hub
          servicePort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prd-pixeon-hub-grpc-ingress
  namespace: prd-pixeon-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - rest.hub.pixeon.cloud
    secretName: prd-pixeon-hub
  rules:
  - host: grpc.hub.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: prd-grpc-hub
          servicePort: 8080
